<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/mylayout"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/master_volume"/>

    <SeekBar
        android:id="@+id/mvseekBar"
        android:layout_width="308dp"
        android:layout_height="wrap_content" />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bgm_volume"/>
    
    <SeekBar
        android:id="@+id/bgmseekBar"
        android:layout_width="310dp"
        android:layout_height="wrap_content" />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/word_volume"/>
    
    <SeekBar
        android:id="@+id/wordseekBar"
        android:layout_width="311dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/returnButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/main_menu" />

</LinearLayout>