<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/pause_menu"
    android:orientation="vertical"
    android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" >

	<ImageView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_weight="130"
	    android:contentDescription="@string/empty" />
    
    <Button
        android:id="@+id/resume_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="200dip"
        android:background="@drawable/button"
        android:text="@string/c_resume"
        android:textSize="8pt"
        android:textColor="#FFFFFF" />
    
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="40"
        android:contentDescription="@string/empty" />
    
    <Button
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:minWidth="200dip"
        android:textSize="8pt"
        android:text="@string/c_settings"
        android:textColor="#FFFFFF" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="40"
        android:contentDescription="@string/empty" />
    
    <Button
        android:id="@+id/reset_button"
        android:background="@drawable/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="8pt"
        android:minWidth="200dip"
        android:text="@string/c_reset"
        android:textColor="#FFFFFF" />
    
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="40"
        android:contentDescription="@string/empty" />
    
    <Button
        android:id="@+id/exit_button"
        android:background="@drawable/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="8pt"
        android:minWidth="200dip"
        android:text="@string/c_exit"
        android:textColor="#FFFFFF" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="200"
        android:contentDescription="@string/empty" />
    
</LinearLayout>